Add Hazelcast cache into the project.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.devtools.remote.secret=boot-secret
+spring.jackson.serialization.write-dates-as-timestamps=false
 server.port=8080
+
+github.get.repos.endpoint=https://api.github.com/users/{username}/repos
