--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
-spring.devtools.remote.secret=boot-secret
-server.port=8080
+spring.application.name=@project.name@
+spring.jmx.default-domain=@project.name@-@api.version@
+server.port=8087
+spring.jackson.serialization.write-dates-as-timestamps=false
+
+spring.devtools.remote.secret=fengsecret
+
+github.get.repos.endpoint=https://api.github.com/users/{username}/repos
